<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Activity.CartActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBtn" />


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/blurView"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/blur_background">

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="#00ffffff"
                        android:ems="10"
                        android:hint="@string/enter_code"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="14sp" />
                </eightbitlab.com.blurview.BlurView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button"
                    style="@android:style/Widget.Button"
                    android:layout_width="145dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/apply_code"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/order_summary"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <eightbitlab.com.blurview.BlurView
                android:id="@+id/blurView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/blur_background"
                app:blurOverlayColor="#20000000">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:padding="16dp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subtotal"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/totalFeeTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$0"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView9" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/place_order"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/textView9"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />

                    <TextView
                        android:id="@+id/deliveryTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="$0"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/totalFeeTxt" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Thành tiền"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView17"
                        app:layout_constraintTop_toBottomOf="@+id/view" />

                    <TextView
                        android:id="@+id/totalTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$0"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/textView18"
                        app:layout_constraintEnd_toEndOf="@+id/taxTxt"
                        app:layout_constraintTop_toTopOf="@+id/textView18" />

                    <TextView
                        android:id="@+id/taxTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="$0"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/deliveryTxt" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/tax"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/textView13"
                        app:layout_constraintTop_toBottomOf="@+id/textView13" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#60ffffff"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView17" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </eightbitlab.com.blurview.BlurView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_bg"
                android:text="@string/place_order"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>